# R2Me2

./: .gitignore  README.md
backend/: app.py  main.py  pyproject.toml
backend/ble data/: trace - 20250629.txt
backend/droid/: commands.py  config.py  connect.py  llama.py  sounds.py  translation.py
backend/droid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/test/: test_DroidConnect.py  test_droid_llama.py
droid-app/: index.html  package-lock.json  package.json
droid-app/src/: App.jsx
droid-app/src/styles/: App.scss  vars.scss
