[project]
name = "droid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.22.3",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "ollama>=0.5.1",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "pydbeacon>=1.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "requests>=2.32.4",
]
